--- a/TaskRank/frontend/index.html
+++ b/TaskRank/frontend/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@400;600;700;&display=swap" rel="stylesheet">
     
-    <title>Projeto Trainee</title>
+    <title>Task.er</title>
   </head>
   <body>
     <div id="root"></div>
